# gettext

./: .cvsignore  .dir-locals.el  .gitattributes  .gitignore  .mailmap  .x-update-copyright  ABOUT-NLS  AUTHORS  BUGS  ChangeLog  DEPENDENCIES  HACKING  INSTALL  INSTALL.windows  Makefile.am  Makefile.in  Makefile.msvc  Makefile.vms  NEWS  PACKAGING  README  README-alpha  README.gemtext  README.windows  README.woe32  THANKS  TODO  acconfig.h  aclocal.m4  aclocal.sh  autogen.sh  autopull.sh  cfg.mk  check-copyright-headers  config.h.in  config.rpath  configure  configure.ac  configure.in  gettext.alias  (+4 more)
autoconf-lib-link/: .cvsignore  .gitignore  ChangeLog  INSTALL  Makefile.am  Makefile.in  aclocal.m4  config.rpath  configure  configure.ac
autoconf-lib-link/m4/: ChangeLog  Makefile.in  lib-link.m4  lib-prefix.m4
autoconf-lib-link/tests/: .gitignore  Makefile.am  Makefile.in  rpath-2_b  rpath-2aaa  rpath-2aab  rpath-2aad  rpath-2abd  rpath-2baa  rpath-2bab  rpath-2bba  rpath-2bbb  rpath-2bbc  rpath-2bbd  rpath-3aaa  rpath-3aac  rpath-3aad  rpath-3aaf  rpath-3aag  rpath-3aah  rpath-3abb  rpath-3abe  rpath-3abg  rpath-3abh  rpath-3baa  rpath-3bad  rpath-3bba  rpath-3bbb  rpath-3bbe  rpath.README
doc/: .cvsignore  ChangeLog  ISO_639  Makefile.am  Makefile.in  autopoint.texi  gettext.info  gettext.info-1  gettext.info-10  gettext.info-2  gettext.info-3  gettext.info-4  gettext.info-5  gettext.info-6  gettext.info-7  gettext.info-8  gettext.info-9  gettext.texi  gettext_1.html  gettext_10.html  gettext_11.html  gettext_12.html  gettext_13.html  gettext_14.html  gettext_15.html  gettext_16.html  gettext_17.html  gettext_18.html  gettext_19.html  gettext_2.html  gettext_20.html  gettext_21.html  gettext_22.html  gettext_3.html  gettext_4.html  gettext_5.html  gettext_6.html  gettext_7.html  gettext_8.html  gettext_9.html  (+23 more)
doc/Admin/: documentation
gettext-runtime/: .cvsignore  .gitignore  ABOUT-NLS  ChangeLog  Makefile.am  Makefile.in  Makefile.msvc  Makefile.vms  NEWS  README.woe32  aclocal.m4  config.h.in  config.h.msvc  configure  configure.ac
gettext-runtime/doc/: .gitignore  ChangeLog  Makefile.am  Makefile.in  Makefile.vms  matrix.texi  nls.texi  rt-gettext.texi  rt-ngettext.texi  rt-printf_gettext.texi  rt-printf_ngettext.texi
gettext-runtime/install-tests/: Makefile.am  itest.pot  test-api.c  test-version.c
gettext-runtime/intl/: .cvsignore  (+81 more)
gettext-tools/: .cvsignore  .gitignore  ABOUT-NLS  ChangeLog  INSTALL  Makefile.am  Makefile.in  Makefile.msvc  Makefile.vms  README.woe32  aclocal.m4  config.h.in  config.h.msvc  configure  configure.ac
gnulib-local/: ChangeLog  Makefile.am
intl-java/: ChangeLog  Makefile.am  Makefile.in
lib/: .cvsignore  3level.h  ChangeLog  Makefile.am  Makefile.in  addext.c  alloca.c  argmatch.c  argmatch.h  backupfile.c  backupfile.h  basename.c  basename.h  c-ctype.c  c-ctype.h  classpath.c  concatpath.c  copy-file.c  copy-file.h  error.c  execute.c  execute.h  findprog.c  findprog.h  fstrcmp.c  fstrcmp.h  full-write.c  full-write.h  gcd.c  gcd.h  gen-lbrkprop.c  getline.c  getline.h  getopt.c  getopt.h  gettext.h  hash.c  hash.h  javacomp.c  javacomp.h  (+71 more)
libasprintf/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  asnprintf.c  asprintf.c  autosprintf.cc  autosprintf.info  config.h.in  configure  configure.in  lib-asprintf.h  liballoca.h  libstdarg.h  ltmain.sh  printf-args.c  printf-args.h  printf-parse.c  printf-parse.h  vasnprintf.c  vasnprintf.h  vasprintf.c  vasprintf.h
libtextstyle/: .gitignore  DEPENDENCIES  HACKING  INSTALL  Makefile.am  NEWS  README  autogen.sh  autopull.sh  configure.ac  version.sh
libuniname/: ChangeLog  Makefile.am  Makefile.in  UnicodeDataNames.txt  gen-uninames  test-names.c  uniname.c  uniname.h  uninames.h
m4/: ChangeLog  Makefile.am  Makefile.in  backupfile.m4  c-bs-a.m4  codeset.m4  fixautomake.m4  flex.m4  fnmatch.m4  getline.m4  gettext.m4  hostname.m4  iconv.m4  inttypes_h.m4  isc-posix.m4  javacomp.m4  javaexec.m4  lcmessage.m4  lib-ld.m4  lib-link.m4  lib-prefix.m4  libtool.m4  mbrtowc.m4  mbswidth.m4  mkdtemp.m4  more-warnings.m4  progtest.m4  setenv.m4  setlocale.m4  siginfo.m4  signalblocking.m4  signed.m4  ssize_t.m4  stdbool.m4  stdint_h.m4  tmpdir.m4  uintmax_t.m4  unionwait.m4  woe32-dll.m4
man/: ChangeLog  Makefile.am  Makefile.in  autopoint.1  autopoint.1.html  bind_textdomain_codeset.3  bind_textdomain_codeset.3.html  bindtextdomain.3  bindtextdomain.3.html  gettext.1  gettext.1.html  gettext.1.html.in  gettext.1.in  gettext.3  gettext.3.html  gettextize.1  msgattrib.1  msgattrib.1.html  msgcat.1  msgcat.1.html  msgcmp.1  msgcmp.1.html  msgcomm.1  msgcomm.1.html  msgconv.1  msgconv.1.html  msgen.1  msgen.1.html  msgexec.1  msgexec.1.html  msgfilter.1  msgfilter.1.html  msgfilter.x  msgfmt.1  msgfmt.1.html  msggrep.1  msggrep.1.html  msginit.1  msginit.1.html  msgmerge.1  (+18 more)
misc/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  add-to-autopoint-files  automake.diff  autopoint.in  gettextize.in  po-compat.el  po-mode.el  tcl_gettext.c
src/: .cvsignore  ChangeLog  FILES  Makefile.am  Makefile.in  dir-list.c  dir-list.h  file-list.c  file-list.h  format-awk.c  format-c.c  format-elisp.c  format-java.c  format-librep.c  format-lisp.c  format-pascal.c  format-php.c  format-python.c  format-tcl.c  format-ycp.c  format.c  format.h  gettext-po.c  gettext.c  gettextp.c  hostname.c  message.c  message.h  msgattrib.c  msgcat.c  msgcmp.c  msgcomm.c  msgconv.c  msgen.c  msgexec.c  msgfilter.c  msgfmt.c  msgfmt.h  msggrep.c  msginit.c  (+92 more)
tests/: .cvsignore  ChangeLog  Makefile.am  Makefile.in  format-awk-1  format-awk-2  format-c-1  format-c-2  format-c-3  format-c-3-prg.c  format-c-4  format-c-4-prg.c  format-elisp-1  format-elisp-2  format-java-1  format-java-2  format-librep-1  format-librep-2  format-lisp-1  format-lisp-2  format-pascal-1  format-pascal-2  format-php-1  format-php-2  format-python-1  format-python-2  format-tcl-1  format-tcl-2  format-ycp-1  format-ycp-2  gettext-1  gettext-2  lang-c  lang-c++  lang-clisp  lang-gawk  lang-java  lang-librep  lang-objc  lang-pascal  (+164 more)
(+2660 files in other folders)
